--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -679,6 +679,8 @@ For more information on creating keys and using the ssh-agent to manage your ssh
 
 _Note: user/password authentication is not supported for any protocol._
 
+Cloned git dirs and working trees are stored by default in `~/.gitlibs`.  This directory is a cache and can be safely removed if needed. The cache location can also be overridden with the environment variable $GITLIBS.
+
 == Installers
 
 For tools installation, see the instructions in the <<xref/../../guides/getting_started#,Getting Started>> guide.
