Add namespaces page to learning guide

--- a/content/guides/learn/flow.adoc
+++ b/content/guides/learn/flow.adoc
@@ -7,6 +7,8 @@ Alex Miller
 :navlinktext: Flow Control
 :prevpagehref: hashed_colls
 :prevpagetitle: Hashed Collections
+:nextpagehref: namespaces
+:nextpagetitle: Namespaces
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
