--- a/content/guides/learn/namespaces.adoc
+++ b/content/guides/learn/namespaces.adoc
@@ -22,7 +22,7 @@ A namespace is both a name context and a container for vars. Namespace names are
 
 Vars are associations between a name (a symbol) and a value. Vars in a namespace have a fully-qualified name that is the combination of the namespace name and the var name. For example, `clojure.string/join` is a fully-qualified var name where `clojure.string` refers to the namespace and `join` refers to the var inside the namespace. All vars are globally accessible via their fully-qualified name. By convention vars have lower case names with `-` separating words, although this is also not required. Var names may contain most non-whitespace characters.
 
-Vars are created using `def` and other special forms or macros that start with `def`, like `defn`. Vars are created in the "current" namespace. The Clojure runtime tracks the current namespace in the var `clojure.core\*ns*`. The current namespace can be changed using the `in-ns` function.
+Vars are created using `def` and other special forms or macros that start with `def`, like `defn`. Vars are created in the "current" namespace. The Clojure runtime tracks the current namespace in the var `pass:[clojure.core/*ns*]`. The current namespace can be changed using the `in-ns` function.
 
 === Loading
 
@@ -34,9 +34,9 @@ In addition to providing a naming context, namespace names also provide a conven
 
 Thus the namespace name `com.some-example.my-app` becomes the load path `com/some_example/my_app.clj`. Load paths are searched using the JVM classpath. The classpath is a series of directory locations or JAR files (JARs are essentially just zip files). 
 
-When a resource is needed, the JVM searches each classpath location in order for a file at the relative location of the load path. So if the classpath was "src:test", the load path would be checked at `src/com/some_example/my_app.clj` then `test/com/some_example/my_app.clj`.
+When a resource is needed, the JVM searches each classpath location in order for a file at the relative location of the load path. So if the classpath was `src:test`, the load path would be checked at `src/com/some_example/my_app.clj` then `test/com/some_example/my_app.clj`.
 
-There are several ways to load code in Clojure, but most commonly loading is accomplished via `reqiure`.
+There are several ways to load code in Clojure, but most commonly loading is accomplished via `require`.
 
 Due to this loading convention, most Clojure is structured with a 1-to-1 mapping of namespaces to files, stored in hierarchical fashion that maps to the namespace structure.
 
@@ -68,8 +68,8 @@ The `clojure.core` referral is done by the `ns` macro. (There are ways to suppre
 The `:require` class corresponds to the `require` function which specifies one or more namespaces to load that this namespace depends on. For each namespace, `require` can do several things:
 
 * Load (or reload) the namespace
-* Optionally assign an *alias* that can be used to refer to vars from the loaded namespace only in the scope of this namespace
-* Optionally *refer* vars from the loaded namespace for use by unqualified name in this namespace
+* Optionally assign an _alias_ that can be used to refer to vars from the loaded namespace only in the scope of this namespace
+* Optionally _refer_ vars from the loaded namespace for use by unqualified name in this namespace
 
 The last two parts are all about making names easier to use. While vars can always be referred to by their fully-qualified name, we rarely want to type fully-qualified names in our code. Aliases let us use shorter versions of longer fully-qualified aliases. Refer allows us to use names without a namespace qualifier at all.
 
@@ -77,7 +77,7 @@ In require, namespaces most commonly take one of three forms:
 
 * `clojure.set` - just loads `clojure.set` namespace (if not already loaded)
 * `[clojure.set :as set]` - load and create an alias `set` for the namespace `clojure.set`
-** This allows you to refer to vars in set with for example `set/union` instead of `clojure.set/union`
+** This allows you to refer to vars in `set` with for example `set/union` instead of `clojure.set/union`
 * `[clojure.set :refer [union intersection]]` - load and refer specific vars into this namespace
 ** This allows you to use just `union` instead of `clojure.set/union`
 
@@ -98,7 +98,5 @@ Similar to `:refer`, the `ns` macro has an `:import` clause (that is supported b
 ----
 
 This example imports the `Date` and `UUID` class from the `java.util` package and the `File` class from the `java.io` package.
-
-
 
 
