--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -9,35 +9,43 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
-== Dependencies
+== Mac OS instructions
 
-Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8 and Java 11), but also tries to ensure interim versions work as well. You can use any Java installation, whether it's a commercial release from Oracle or an open source version based on OpenJDK (like adoptopenjdk).
+=== Install brew
 
-The Clojure tools require that either the `java` command is on the path or that the `JAVA_HOME` environment variable is set.
+`brew` is a package manager for Mac OS X. To install `brew`:
 
-== Clojure installer and CLI tools
+* Go to https://brew.sh/ and follow the installation instructions
 
-Clojure provides <<deps_and_cli#,command line tools>> that can be used to start a Clojure repl, use Clojure and Java libraries, and start Clojure programs. 
+=== Install Java
 
-Follow these instructions to install the latest release of the `clj` and `clojure` tools:
+Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8 and Java 11), but also tries to ensure interim versions work as well. If you don't already hava Java installed, we recommend installing adoptopenjdk 11.
 
-=== Installation on Mac via https://brew.sh[Homebrew]
+* `brew tap adoptopenjdk/openjdk` - add the adoptopenjdk tap to brew
+* `brew install adoptopenjdk11` - install adoptopenjdk 11 (you may need to enter your user password)
 
-Install the command line tools with `brew` from the https://github.com/clojure/homebrew-tools[clojure/tools tap]:
-
-[source,shell]
-----
-brew install clojure/tools/clojure
-----
-
-If you've already installed this way in the past, you can upgrade to the latest release with:
+You then need to add `java` to your PATH:
 
 [source,shell]
 ----
-brew upgrade clojure/tools/clojure
+echo 'export PATH="/Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home/bin:$PATH"' >> ~/.zshrc
 ----
 
-=== Installation on Linux
+=== Install Clojure <<deps_and_cli#,command line tools>>
+
+This adds the commands `clojure` and `clj` to your system from the https://github.com/clojure/homebrew-tools[clojure/tools tap]:
+
+* `brew install clojure/tools/clojure`
+
+== Linux instructions
+
+=== Install Java
+
+* Go to https://adoptopenjdk.net/ and follow the instructions
+* OR use your package manager to install OpenJDK 11
+* Ensure that `java` is in your path
+
+=== Install Clojure <<deps_and_cli#,command line tools>>
 
 To install with the Linux script installer:
 
@@ -69,11 +77,19 @@ MANPATH_MAP /opt/infrastructure/clojure/bin /opt/infrastructure/clojure/man
 
 The `linux-install` script can be removed after installation.
 
-=== Installation on Windows
+== Windows instructions
+
+=== Install Java
+
+* Go to https://adoptopenjdk.net
+* Download and run the Windows installer
+* Ensure `java` is on the system PATH (see this option on the Custom Setup page)
+
+=== Install Clojure <<deps_and_cli#,command line tools>>
 
 An early release version of clj on Windows is available at https://github.com/clojure/tools.deps.alpha/wiki/clj-on-Windows[clj on Windows].
 Please provide feedback on https://ask.clojure.org[Ask Clojure] or Clojurians slack in #clj-on-windows.
 
-=== Other versions
+== More information
 
-See the <<xref/../../releases/tools#,changelog>> for version history and the https://github.com/clojure/homebrew-tools[Clojure tap] for info on installing older versions or newer prereleases instead.
+For other versions of the Clojure command-line tools, see the <<xref/../../releases/tools#,changelog>> for version history and the https://github.com/clojure/homebrew-tools[Clojure tap] for info on installing older versions or newer prereleases instead.
