--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -18,7 +18,7 @@ Install these first:
 * <<install_clojure#,Clojure>> - language, REPL (Read-Eval-Print-Loop), library support, and runner
 * Editor - choose one of:
 ** <<aquamacs#,Aquamacs>> [Mac]
-** <<vscode#,VS Code with ...>> [Windows, Linux, Mac]
+** <<vscode-clover#,VS Code>> [Windows, Linux, Mac]
 
 == How do I work with these tools?
 
