--- a/content/guides/vscode-clover.adoc
+++ b/content/guides/vscode-clover.adoc
@@ -55,6 +55,8 @@ Some keys should be rebound to make it easier to work with.
 
 Copy these settings to `~/Library/Application Support/Code/User/keybindings.json`:
 
+WIP TODO:
+
 [source,json]
 ----
 [
