--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -14,7 +14,7 @@ New to Clojure? Head to the <<xref/../../guides/getting_started#,Getting Started
 These tools allow you to start a REPL for interactive use, download Clojure libraries (including Clojure itself), and run Clojure programs.
 ====
 
-== Stable Release: 1.10.1 (June 6, 2019)
+== Stable Release: 1.10.2 (Jan 26, 2021)
 
 Include the release in your project using the following coordinates:
 
@@ -22,22 +22,22 @@ deps.edn coordinate:
 
 [source,clojure]
 ----
-org.clojure/clojure {:mvn/version "1.10.1"}
+org.clojure/clojure {:mvn/version "1.10.2"}
 ----
 
 Leiningen dependency:
 
 [source,clojure]
 ----
-[org.clojure/clojure "1.10.1"]
+[org.clojure/clojure "1.10.2"]
 ----
 
 === Dependencies
 
-Clojure 1.10.1 depends on the following libraries:
+Clojure 1.10.2 depends on the following core libraries:
 
- * `org.clojure/spec.alpha {:mvn/version "0.2.176"}`
- * `org.clojure/core.specs.alpha {:mvn/version "0.2.44"}`
+ * `org.clojure/spec.alpha {:mvn/version "0.2.194"}`
+ * `org.clojure/core.specs.alpha {:mvn/version "0.2.56"}`
 
 Including Clojure with a tool like `clj` or `Leiningen` will automatically include these libraries as transitive dependencies.
 
@@ -53,15 +53,7 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
-== Development Release: 1.10.2-rc3 (Jan 15, 2021)
-
-* Clojure 1.10.2-rc3
-* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.2*[Clojure 1.10.2 pre-release builds]
-* <<devchangelog#,Dev changelog>>
-* Dependencies:
-** `org.clojure/spec.alpha {:mvn/version "0.2.194"}`
-** `org.clojure/core.specs.alpha {:mvn/version "0.2.56"}`
-* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
+== Development Release: currently none
 
 == Older Releases
 
@@ -80,7 +72,7 @@ Specify the version of Clojure that you want in your deps.edn:
 [source,clojure]
 ----
 {:deps
- {org.clojure/clojure {:mvn/version "1.10.1"}}}
+ {org.clojure/clojure {:mvn/version "1.10.2"}}}
 ----
 
 === Via Leiningen
@@ -89,7 +81,7 @@ Modify the dependencies and repositories sections of your https://leiningen.org/
 [source,clojure]
 ----
 ; under dependencies, select the release of clojure that you want
-:dependencies [[org.clojure/clojure "1.10.1"]]
+:dependencies [[org.clojure/clojure "1.10.2"]]
 ----
 
 == Using Clojure SNAPSHOT releases
