--- a/content/guides/install_clojure2.adoc
+++ b/content/guides/install_clojure2.adoc
@@ -61,7 +61,7 @@ The `linux-install` script can be removed after installation.
 
 == Windows instructions
 
-Prerequisistes: [#java,Java]
+Prerequisistes: <<install_clojure2#java,Java>>
 
 An early release version of clj on Windows is available at https://github.com/clojure/tools.deps.alpha/wiki/clj-on-Windows[clj on Windows].
 Please provide feedback on https://ask.clojure.org[Ask Clojure] or Clojurians slack in #clj-on-windows.
