--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -176,6 +176,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Fy!
 * GetContented
 * GetSet
+* Gmaven
 * GoCatch
 * Gofore
 * Goizper Group
