--- a/content/guides/weird_characters.adoc
+++ b/content/guides/weird_characters.adoc
@@ -241,7 +241,7 @@ Note that while `#inst` and `#uuid` are available in edn, `#js` is not.
 
 == `%`, `%n`, `%&` - Anonymous function arguments
 
-`%` is an argument in an anonymous function `#(...)` as in `#(* % %)`.
+`%` is an argument in an anonymous function `pass:[#(...)]` as in `#(* % %)`.
 
 When an anonymous function is expanded, it becomes an `fn` form and `%` args are replaced with gensym'ed names
 (here we use arg1, etc for readability):
@@ -257,12 +257,12 @@ Anonymous function arity is determined based on the highest number `%` argument.
 
 [source,clojure]
 ----
-user=> (#(println %1 %2) "Hello " "Clojure ")
+user=> (#(println %1 %2) "Hello " "Clojure")
 Hello Clojure ; takes 2 args
 user=> (macroexpand `#(println %1 %2))
 (fn* [arg1 arg2] (clojure.core/println arg1 arg2)) ; takes 2 args
 
-user=> (#(println %4) "Hello " "Clojure " ", Thank " "You!! ")
+user=> (#(println %4) "Hello " "Clojure " ", Thank " "You!!")
 You!! ; takes 4 args, doesn't use first 3 args
 user=> (macroexpand `#(println %4))
 (fn* [arg1 arg2 arg3 arg4] (clojure.core/println arg4)) ; takes 4 args doesn't use 3
@@ -283,7 +283,7 @@ argument).
 
 [source,clojure]
 ----
-user=> (#(println %&) "Hello " "Clojure " ", Thank " "You!! ")
+user=> (#(println %&) "Hello " "Clojure " ", Thank " "You!!")
 (Hello Clojure , Thank You!! ) ; takes n args
 user=> (macroexpand '#(println %&))
 (fn* [& rest__11#] (println rest__11#))
