--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -53,7 +53,15 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
-== Development Release: currently none
+== Development Release: 1.10.3-rc1 (Jan 15, 2021)
+
+* Clojure 1.10.3-rc1
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.3*[Clojure 1.10.3 pre-release builds]
+* <<devchangelog#,Dev changelog>>
+* Dependencies:
+** `org.clojure/spec.alpha {:mvn/version "0.2.194"}`
+** `org.clojure/core.specs.alpha {:mvn/version "0.2.56"}`
+* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
 == Older Releases
 
