Add Klipse blog in community resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -45,6 +45,7 @@ Community:
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://guide.clojure.style/[Clojure Style Guide]
 * https://www.maria.cloud/[Maria] - a coding environment for beginners
+* https://blog.klipse.tech/tags/#clojure[Klipse] - a series of articles with interactive code snippets in Clojure
 
 Newsletters
 
